--- a/catalog/view/theme/helium/template/common/search.twig
+++ b/catalog/view/theme/helium/template/common/search.twig
@@ -1,6 +1,6 @@
 <div id="search">
   <div class="input-group">
-    <input id="search-input" type="search" name="search" value="{{ search }}" placeholder="{{ text_search }}" />
+    <input id="search-input" type="search" name="search" value="{{ search }}" placeholder="{{ text_search }}" data-action="searchFunction"/>
     <button type="button" aria-label="{{ text_search }}"><i class="icon-search"></i></button>
   </div>
   <div id="search-results"></div>
