--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -15,6 +15,8 @@
   {% if robots %}  <meta name="robots" content="{{ robots }}" /><meta name="googlebot" content="{{ robots }}">{% endif %}
   {% if keywords %}<meta name="keywords" content="{{ keywords }}" />{% endif %}
   {# <link rel="  <link rel="stylesheet preload" as="style" href="catalog/view/theme/helium/css/stylesheet.css" media="screen" /> #}
+  <link rel="preload" href="catalog/view/theme/helium/css/fonts/fontello.woff2" as="font" type="font/woff2" crossorigin="anonymous"> 
+  <link rel="preload" href="catalog/view/theme/helium/css/fonts/Robotocondensed.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet preload" as="style" href="catalog/view/theme/helium/css/common.css" media="screen" />
   <link rel="stylesheet preload" as="style" href="catalog/view/theme/helium/css/fontello.css" media="screen" />
   {# <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin> #}
@@ -24,13 +26,11 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto|Roboto+Condensed:wght@500&display=swap'> #}
 
 
-  <link rel="preload" href="catalog/view/theme/helium/css/fonts/Robotocondensed.woff2" as="font" type="font/woff2" crossorigin>
 
   {% if logo %}
   <link rel="preload" as="image" href="{{ logo }}">
   {% endif %}
   {# <script type="text/javascript" src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script> #}
-  {# <link rel="preload" href="catalog/view/theme/helium/css/fonts/fontello.woff2" as="font" type="font/woff2" crossorigin>  #}
   {% for style in styles %}
     <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
   {% endfor %}
@@ -38,7 +38,7 @@
     <script defer src="{{ script }}" type="text/javascript"></script>
   {% endfor %}
   {% for link in links %}
-    <link href="{{ link.href }}" rel="{{ link.rel }}" />
+  <link rel="{{ link.rel }}" {% if link.as %}as="{{ link.as }}"{% endif %} href="{{ link.href }}" />
   {% endfor %}
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:type" content="website" />
