--- a/catalog/view/theme/helium/template/product/compare_table.twig
+++ b/catalog/view/theme/helium/template/product/compare_table.twig
@@ -17,7 +17,7 @@
           </td>
         {% endfor %} 
       </tr>
-      <tr>
+      <tr id="product_id_{{ product_id }}">
         <td>{{ text_image }}</td>
         {% for product in products %}
           <td class="text-center">
