--- a/catalog/view/theme/helium/css/fontello.css
+++ b/catalog/view/theme/helium/css/fontello.css
@@ -3,12 +3,13 @@
   font-family: 'fontello';
   src: url('fonts/fontello.eot?77853952');
   src: url('fonts/fontello.eot?77853952#iefix') format('embedded-opentype'),
-       url('fonts/fontello.woff2?77853952') format('woff2'),
+       url('fonts/fontello.woff2') format('woff2'),
        url('fonts/fontello.woff?77853952') format('woff'),
        url('fonts/fontello.ttf?77853952') format('truetype'),
        url('fonts/fontello.svg?77853952#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
