--- a/catalog/view/theme/helium/template/product/special.twig
+++ b/catalog/view/theme/helium/template/product/special.twig
@@ -4,7 +4,7 @@
 <main role="main" id="special-products">
   <h1>{{ heading_title }}</h1>
       {% if products %}
-        <div class="row category-sort">
+        {# <div class="row category-sort">
           <div class="input-group">
             <label for="input-sort">{{ text_sort }}</label>
             <select id="input-sort" class="form-control" onchange="location = this.value;">
@@ -17,7 +17,7 @@
             {% endfor %}
             </select>
           </div>
-        </div>
+        </div> #}
         {# Список товаров #}
         <div class="product grid"> 
           {% for product in products %}
