--- a/catalog/view/theme/helium/template/extension/module/special.twig
+++ b/catalog/view/theme/helium/template/extension/module/special.twig
@@ -1,6 +1,10 @@
-<h3>{{ heading_title }}</h3>
-<div class="row">
-{% for product in products %}
-  {% include 'helium/template/product/product_miniature.twig' with {product: product} %}
-{% endfor %}
-</div>
+{% if products %}
+  <div class="module special-products">
+    <span class="h3">{{ heading_title }}</span>
+    <div class="scroll-x js_scroll">
+    {% for product in products %}
+      {% include 'helium/template/product/product_miniature.twig' with {product: product} %}
+    {% endfor %}   
+    </div>
+  </div>
+ {% endif %}
