--- a/catalog/view/theme/helium/template/blog/review.twig
+++ b/catalog/view/theme/helium/template/blog/review.twig
@@ -1,27 +1,20 @@
 {% if reviews %}
-  {% for review in reviews %}
-  <table class="table table-striped table-bordered">
-    <tr>
-      <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
-      <td class="text-right">{{ review.date_added }}</td>
-    </tr>
-    <tr>
-      <td colspan="2">
-        <p>{{ review.text }}</p>
-        <div class="rating">
-          {% for i in 1..5 %}
-            {% if review.rating < i %}
-              <i class="icon-star-empty"></i>
-            {% else %}
-              <i class="icon-star"></i>
-            {% endif %}
-          {% endfor %}
+  <div id="reviews">
+    <span class="h1 uppercase">{{ text_reviews }}</span>
+      {% for review in reviews %}
+        <div role="comment" class="block review">
+          <div class="review_header">
+            <address>
+              <p rel="author">{{ review.author }}</p>
+              <time pubdate class="text-right"><i class="icon-calendar"></i>{{ review.date_added }}</time>
+            </address>
+            {% include 'helium/template/common/rating_stars.twig' with {rating: review.rating} %}
+          </div>
+          <div><p>{{ review.text }}</p></div>
         </div>
-        </td>
-    </tr>
-  </table>
-  {% endfor %}
-  <div class="text-right">{{ pagination }}</div>
+      {% endfor %}
+  {{ pagination }}
+  </div>
 {% else %}
   <p>{{ text_no_reviews }}</p>
 {% endif %} 
