--- a/catalog/view/theme/helium/template/blog/article.twig
+++ b/catalog/view/theme/helium/template/blog/article.twig
@@ -21,7 +21,7 @@
         <li><a class="button" href="{{ share }}#photos" title="{{ tab_photos }}">{{ tab_photos }}</a></li>
       {% endif %}
       {% if review_status and reviews %}
-        <li><a class="button" href="{{ share }}#reviews" title="{{ text_reviews }}">{{ text_reviews }} ({{ reviews_count }})</a></li>
+        <li><a class="button" href="{{ share }}#js_reviews" title="{{ text_reviews }}">{{ text_reviews }} ({{ reviews_count }})</a></li>
       {% endif %}
       {% if products %}
         <li><a class="button" href="{{ share }}#related_products" title="{{ text_related_product }}">{{ text_related_product }} ({{products|length}})</a></li>
