--- a/catalog/view/theme/helium/template/product/review.twig
+++ b/catalog/view/theme/helium/template/product/review.twig
@@ -1,5 +1,5 @@
 {% if review_list.reviews %}
-<div id="js-reviews">
+<div id="js_reviews">
   {% for review in review_list.reviews %}
     <table role="comment" class="table table-striped table-bordered js-product-review">
       <tr>
