--- a/catalog/view/theme/helium/template/common/header.twig
+++ b/catalog/view/theme/helium/template/common/header.twig
@@ -90,6 +90,7 @@
       {{ currency }}
       {{ language }}
       <a class="phone button" href="tel:{{ telephone }}" rel="phone" title="{{ text_phones }}" aria-label="{{ text_phones }}"><i class="icon-phone"></i><span class="hidden-md">{{ telephone }}</span></a>
+      <button data-action="contactsModal" aria-haspopup="dialog" title="{{ text_location }}" aria-label="{{ text_location }}"><i class="icon-location"></i>{{ text_location }}</button>
       <div class="account-menu dropdown">
         <button data-accordion-target="account" type="button" title="{{ text_account }}" aria-label="{{ text_account }}">
           <i class="icon-user"></i>
